Checkpoint before normalizing relative paths

--- a/about.html
+++ b/about.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <div data-include="/includes/meta.html"></div>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-JHT0DBJBHH"></script>
 <script>
@@ -24,7 +25,7 @@
 <body>
   <div data-include="includes/header.html"></div>
 
-    <main class="content">
+    <main class="content" id="main">
     <h1>About Tito</h1>
     
     <section class="callout">
@@ -68,5 +69,6 @@
   </main>
   <div data-include="includes/footer.html"></div>
   <script src="scripts/include.js"></script>
+  <script src="/scripts/analytics.js" defer></script>
 </body>
 </html>
