--- a/donor-testimonials.html
+++ b/donor-testimonials.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <div data-include="/includes/meta.html"></div>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-JHT0DBJBHH"></script>
 <script>
@@ -25,7 +26,7 @@
 <body>
   <div data-include="includes/header.html"></div>
 
-  <main class="content">
+  <main class="content" id="main">
     <h1>Donor Testimonials</h1>
     <p>These stories come from people who have walked the path of living donation. Each one offers a different perspective, but they all share the same message: donating a kidney changes lives.</p>
 
@@ -61,5 +62,6 @@
 
   <div data-include="includes/footer.html"></div>
   <script src="scripts/include.js"></script>
+  <script src="/scripts/analytics.js" defer></script>
 </body>
 </html>
