--- a/hub/dialysis/expectations.html
+++ b/hub/dialysis/expectations.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+  <div data-include="/includes/meta.html"></div>
   <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-JHT0DBJBHH"></script>
 <script>
@@ -24,7 +25,7 @@
   </head>
   <body>
     <div data-include="../../includes/header.html"></div>
-    <main class="content">
+    <main class="content" id="main">
 <div data-include="../../includes/dialysis-subnav.html"></div>
       <h1>What to Expect During Dialysis</h1>
 
@@ -67,6 +68,7 @@
       </p>
     </main>
     <div data-include="../../includes/footer.html"></div>
+  <script src="/scripts/analytics.js" defer></script>
   </body>
 </html>
 
