--- a/hub/dialysis/staff/index.html
+++ b/hub/dialysis/staff/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+  <div data-include="/includes/meta.html"></div>
     <!-- Google tag (gtag.js) -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
+  <div data-include="/includes/meta.html"></div>
   <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-JHT0DBJBHH"></script>
 <script>
@@ -29,7 +31,7 @@
 
   <body>
     <div data-include="/includes/header.html"></div>
-    <main class="content">
+    <main class="content" id="main">
       <div data-include="/includes/dialysis-subnav.html"></div>
       <div data-include="/includes/dialysis-staff-subnav.html"></div>
 
@@ -119,6 +121,7 @@
     </main>
 
     <div data-include="/includes/footer.html"></div>
+  <script src="/scripts/analytics.js" defer></script>
   </body>
 </html>
 
