--- a/hub/index.html
+++ b/hub/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+  <div data-include="/includes/meta.html"></div>
   <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-JHT0DBJBHH"></script>
 <script>
@@ -23,7 +24,7 @@
   </head>
 <body>
   <div data-include="../includes/header.html"></div>
-  <main class="content">
+  <main class="content" id="main">
     <h1>Kidney Knowledge Hub</h1>
     <p>
       Clear, honest information for anyone navigating kidney disease, dialysis, transplant,
@@ -73,6 +74,7 @@
 </div>
   </main>
   <div data-include="../includes/footer.html"></div>
+  <script src="/scripts/analytics.js" defer></script>
 </body>
 </html>
 
