--- a/hub/transplant/postop/staff-postop.html
+++ b/hub/transplant/postop/staff-postop.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <div data-include="/includes/meta.html"></div>
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-JHT0DBJBHH"></script>
   <script>
@@ -21,7 +22,7 @@
 </head>
 <body>
   <div data-include="../../../includes/header.html"></div>
-  <main class="content">
+  <main class="content" id="main">
     <div data-include="../../../includes/transplant-subnav.html"></div>
     <h1>Transplant Staff</h1>
     <p>
@@ -31,6 +32,7 @@
   </main>
   <div data-include="../../../includes/footer.html"></div>
   <script src="../../../scripts/include.js" defer></script>
+  <script src="/scripts/analytics.js" defer></script>
 </body>
 </html>
 
