--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <div data-include="/includes/meta.html"></div>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-JHT0DBJBHH"></script>
 <script>
@@ -23,7 +24,7 @@
   
   
 
-  <main class="content">
+  <main class="content" id="main">
     <h1>Welcome to Tito Needs a Kidney</h1>
     <p>This site is a living guide for people dealing with kidney failure, dialysis, transplant, or living donation — built from lived experience, not just theory.</p>
     
@@ -52,6 +53,7 @@
 
   <div data-include="includes/footer.html"></div>
   <script src="scripts/include.js"></script>
+  <script src="/scripts/analytics.js" defer></script>
 </body>
 </html>
 
