--- a/book.html
+++ b/book.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <div data-include="/includes/meta.html"></div>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-JHT0DBJBHH"></script>
 <script>
@@ -23,7 +24,7 @@
 <body>
   <div data-include="includes/header.html"></div>
 
-  <main class="content">
+  <main class="content" id="main">
     <h1>Tito Needs a Kidney (The Book)</h1>
     <div class="callout">
   <p>
@@ -61,5 +62,6 @@
 
   <div data-include="includes/footer.html"></div>
 <script src="scripts/include.js"></script>
+  <script src="/scripts/analytics.js" defer></script>
 </body>
 </html>
