--- a/donor-info.html
+++ b/donor-info.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <div data-include="/includes/meta.html"></div>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-JHT0DBJBHH"></script>
 <script>
@@ -25,7 +26,7 @@
 <body>
   <div data-include="includes/header.html"></div>
 
-  <main class="content">
+  <main class="content" id="main">
   <div class="callout">
   <p>
     💡 <strong>Thinking about donating a kidney?</strong><br>
@@ -105,5 +106,6 @@
     <p><a href="index.html">← Back to Home</a></p>
   </footer>
 <script src="scripts/include.js"></script>
+  <script src="/scripts/analytics.js" defer></script>
 </body>
 </html>
