--- a/hub/dialysis/staff/nurse.html
+++ b/hub/dialysis/staff/nurse.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+  <div data-include="/includes/meta.html"></div>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-JHT0DBJBHH"></script>
     <script>
@@ -32,7 +33,7 @@
     <!-- Header include -->
     <div data-include="/includes/header.html"></div>
 
-    <main class="content">
+    <main class="content" id="main">
       <!-- Dialysis subnav include -->
       <div data-include="/includes/dialysis-subnav.html"></div>
   <div data-include="/includes/dialysis-staff-subnav.html"></div>
@@ -81,6 +82,7 @@
 
     <!-- Footer include -->
     <div data-include="/includes/footer.html"></div>
+  <script src="/scripts/analytics.js" defer></script>
   </body>
 </html>
 
