--- a/hub/donation/who-can-donate.html
+++ b/hub/donation/who-can-donate.html
@@ -1,37 +1,80 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <!-- Google tag (gtag.js) -->
+  <!-- Meta include (ok to keep here with your loader) -->
+  <div data-include="/includes/meta.html"></div>
+
+  <!-- GA4 -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-JHT0DBJBHH"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
+    function gtag(){ dataLayer.push(arguments); }
     gtag('js', new Date());
-    gtag('config', 'G-JHT0DBJBHH');
+    gtag('config', 'G-JHT0DBJBHH', { transport_type: 'beacon' });
   </script>
-  <meta charset="UTF-8" />
+
+  <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Who Can Donate - Kidney Donation Hub</title>
-  <!-- Google Fonts: Open Sans -->
+
+  <!-- Fonts & CSS -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/styles/main.css" />
+  <link rel="stylesheet" href="/assets/css/main.css" /> <!-- <- adjust if your path is /styles/main.css -->
+
+  <!-- Site scripts (defer preserves order) -->
   <script src="/scripts/include.js" defer></script>
   <script src="/scripts/active-link.js" defer></script>
 </head>
 <body>
-  <div data-include="../../includes/header.html"></div>
-  <main class="content">
-    <div data-include="../../includes/donation-subnav.html"></div>
+  <div data-include="/includes/header.html"></div>
+
+  <main class="content" id="main">
+    <div data-include="/includes/donation-subnav.html"></div>
+
     <h1>Who Can Donate?</h1>
-    <p>
-      This section explains the eligibility criteria for becoming a living kidney donor.
-      We’ll outline medical requirements, age considerations, and common disqualifications.
-    </p>
+    <p>Living kidney donation is possible for many healthy adults. This page explains common eligibility factors and when donation isn’t a good idea.</p>
+
+    <h2>Basic eligibility</h2>
+    <ul>
+      <li>Age: usually 18–70 (varies by center).</li>
+      <li>Overall health: no serious heart, lung, or uncontrolled metabolic disease.</li>
+      <li>Blood pressure: normal or well-controlled without organ damage.</li>
+      <li>Kidney health: normal function, no significant protein or blood in urine.</li>
+      <li>Healthy body weight and fitness for anesthesia and surgery.</li>
+    </ul>
+
+    <h2>Common reasons you may not be eligible</h2>
+    <ul>
+      <li>Diabetes (type 1 or type 2), or prediabetes with other risk factors.</li>
+      <li>Uncontrolled hypertension or need for multiple BP meds.</li>
+      <li>History of significant kidney disease, recurrent stones, or abnormal imaging.</li>
+      <li>Active cancer or very recent cancer treatment.</li>
+      <li>Untreated mental health or substance-use issues affecting recovery/consent.</li>
+      <li>Pregnancy (postpone) or planning pregnancy very soon.</li>
+    </ul>
+
+    <h2>Donation paths</h2>
+    <ul>
+      <li><strong>Directed:</strong> donate to a specific person.</li>
+      <li><strong>Paired exchange:</strong> swap with another incompatible pair.</li>
+      <li><strong>Non-directed:</strong> start a chain; kidney goes to best match.</li>
+    </ul>
+
+    <h2>People on your team</h2>
+    <ul>
+      <li><strong>Independent Living Donor Advocate (ILDA)</strong></li>
+      <li>Transplant nephrologist, surgeon, social worker, dietitian, coordinator</li>
+    </ul>
+
+    <div class="callout"><p><strong>Questions to ask:</strong> Am I at higher risk because of family history? What would disqualify me? How soon could I return to work?</p></div>
   </main>
-  <div data-include="../../includes/footer.html"></div>
-  <script src="../../scripts/include.js" defer></script>
+
+  <div data-include="/includes/footer.html"></div>
+
+  <!-- Analytics click tracker (after GA + DOM) -->
+  <script src="/scripts/analytics.js" defer></script>
 </body>
 </html>
 
