--- a/testimonials/donor-amy.html
+++ b/testimonials/donor-amy.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <div data-include="/includes/meta.html"></div>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-JHT0DBJBHH"></script>
 <script>
@@ -25,7 +26,7 @@
 <body>
   <div data-include="../includes/header.html"></div>
 
-  <main class="content">
+  <main class="content" id="main">
  <div class="testimonial-header">
     <h1>Amy</h1>
     <p class="intro">
@@ -62,5 +63,6 @@
   <div data-include="../includes/footer.html"></div>
   <script src="../scripts/include.js"></script>
 
+  <script src="/scripts/analytics.js" defer></script>
 </body>
 </html>
