--- a/testimonials/donor-luis.html
+++ b/testimonials/donor-luis.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <div data-include="/includes/meta.html"></div>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-JHT0DBJBHH"></script>
 <script>
@@ -24,7 +25,7 @@
 
 
 
-  <main class="content">
+  <main class="content" id="main">
    <div class="testimonial-header">
   <h1>Luis B.</h1>
   <p class="intro">
@@ -74,5 +75,6 @@
 <div data-include="../includes/footer.html"></div>
   <script src="../scripts/include.js"></script>
 
+  <script src="/scripts/analytics.js" defer></script>
 </body>
 </html>
