checkpoint before normalization

--- a/hub/dialysis/expectations.html
+++ b/hub/dialysis/expectations.html
@@ -19,14 +19,14 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/styles/main.css" />
-    <script src="../../scripts/include.js" defer></script>
+    <script src="/scripts/include.js" defer></script>
   <script src="/scripts/include.js" defer></script>
   <script src="/scripts/active-link.js" defer></script>
   </head>
   <body>
-    <div data-include="../../includes/header.html"></div>
+    <div data-include="/includes/header.html"></div>
     <main class="content" id="main">
-<div data-include="../../includes/dialysis-subnav.html"></div>
+<div data-include="/includes/dialysis-subnav.html"></div>
       <h1>What to Expect During Dialysis</h1>
 
       <p>
@@ -67,7 +67,7 @@
         Over time, you’ll get used to the process. Every center runs a little differently, but most follow the same structure. Ask questions. Speak up if something doesn’t feel right.
       </p>
     </main>
-    <div data-include="../../includes/footer.html"></div>
+    <div data-include="/includes/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
   </body>
 </html>
