--- a/hub/dialysis/index.html
+++ b/hub/dialysis/index.html
@@ -19,14 +19,14 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/styles/main.css" />
-    <script src="../../scripts/include.js" defer></script>
+    <script src="/scripts/include.js" defer></script>
   <script src="/scripts/include.js" defer></script>
   <script src="/scripts/active-link.js" defer></script>
   </head>
   <body>
-    <div data-include="../../includes/header.html"></div>
+    <div data-include="/includes/header.html"></div>
     <main class="content" id="main">
-<div data-include="../../includes/dialysis-subnav.html"></div>
+<div data-include="/includes/dialysis-subnav.html"></div>
   <h1>Dialysis Hub</h1>
   <p>
     Dialysis replaces the work of your kidneys when they can no longer filter your 
@@ -82,7 +82,7 @@
     </p>
   </section>
     </main>
-    <div data-include="../../includes/footer.html"></div>
+    <div data-include="/includes/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
   </body>
 </html>
