--- a/hub/dialysis/schedule.html
+++ b/hub/dialysis/schedule.html
@@ -19,14 +19,14 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/styles/main.css" />
-    <script src="../../scripts/include.js" defer></script>
+    <script src="/scripts/include.js" defer></script>
   <script src="/scripts/include.js" defer></script>
   <script src="/scripts/active-link.js" defer></script>
   </head>
   <body>
-    <div data-include="../../includes/header.html"></div>
+    <div data-include="/includes/header.html"></div>
     <main class="content" id="main">
-<div data-include="../../includes/dialysis-subnav.html"></div>
+<div data-include="/includes/dialysis-subnav.html"></div>
       <h1>Dialysis Schedule & Timing</h1>
 
       <p>
@@ -55,7 +55,7 @@
         Plan for about 5–6 hours total door-to-door. Many people bring books, headphones, or small projects. Tell work or caregivers your schedule in advance. Dialysis becomes part of your weekly routine — it’s demanding, but predictable.
       </p>
     </main>
-    <div data-include="../../includes/footer.html"></div>
+    <div data-include="/includes/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
   </body>
 </html>
