--- a/hub/dialysis/staff/clinic-administrator.html
+++ b/hub/dialysis/staff/clinic-administrator.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="/styles/main.css" />
 
     <!-- Include loader (one level deeper than /hub/dialysis/*.html) -->
-    <script src="../../../scripts/include.js" defer></script>
+    <script src="/scripts/include.js" defer></script>
   <script src="/scripts/include.js" defer></script>
   <script src="/scripts/active-link.js" defer></script>
   </head>
