--- a/hub/donation/index.html
+++ b/hub/donation/index.html
@@ -22,7 +22,7 @@
   <script src="/scripts/active-link.js" defer></script>
 </head>
 <body>
-  <div data-include="../../includes/header.html"></div>
+  <div data-include="/includes/header.html"></div>
   <main class="content" id="main">
   <h1>Living Kidney Donation Hub</h1>
   <p>
@@ -79,8 +79,8 @@
     </p>
   </section>
   </main>
-  <div data-include="../../includes/footer.html"></div>
-  <script src="../../scripts/include.js" defer></script>
+  <div data-include="/includes/footer.html"></div>
+  <script src="/scripts/include.js" defer></script>
   <script src="/scripts/analytics.js" defer></script>
 </body>
 </html>
