--- a/hub/donation/risks.html
+++ b/hub/donation/risks.html
@@ -21,17 +21,17 @@
   <script src="/scripts/active-link.js" defer></script>
 </head>
 <body>
-  <div data-include="../../includes/header.html"></div>
+  <div data-include="/includes/header.html"></div>
   <main class="content" id="main">
-    <div data-include="../../includes/donation-subnav.html"></div>
+    <div data-include="/includes/donation-subnav.html"></div>
     <h1>Risks of Kidney Donation</h1>
     <p>
       Explore the short-term and long-term risks of living kidney donation, including 
       surgical complications and impacts on future health.
     </p>
   </main>
-  <div data-include="../../includes/footer.html"></div>
-  <script src="../../scripts/include.js" defer></script>
+  <div data-include="/includes/footer.html"></div>
+  <script src="/scripts/include.js" defer></script>
   <script src="/scripts/analytics.js" defer></script>
 </body>
 </html>
