--- a/hub/transplant/preop/index.html
+++ b/hub/transplant/preop/index.html
@@ -22,9 +22,9 @@
   <script src="/scripts/active-link.js" defer></script>
 </head>
 <body>
-  <div data-include="../../../includes/header.html"></div>
+  <div data-include="/includes/header.html"></div>
   <main class="content" id="main">
-    <div data-include="../../../includes/transplant-subnav.html"></div>
+    <div data-include="/includes/transplant-subnav.html"></div>
       <h1>Pre-Op: Preparing for Kidney Transplant</h1>
   <p>
     Before receiving a kidney transplant, you’ll go through an evaluation and 
@@ -73,8 +73,8 @@
     </p>
   </section>
   </main>
-  <div data-include="../../../includes/footer.html"></div>
-  <script src="../../../scripts/include.js" defer></script>
+  <div data-include="/includes/footer.html"></div>
+  <script src="/scripts/include.js" defer></script>
   <script src="/scripts/analytics.js" defer></script>
 </body>
 </html>
