--- a/hub/dialysis/side-effects.html
+++ b/hub/dialysis/side-effects.html
@@ -19,14 +19,14 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/styles/main.css" />
-    <script src="../../scripts/include.js" defer></script>
+    <script src="/scripts/include.js" defer></script>
   <script src="/scripts/include.js" defer></script>
   <script src="/scripts/active-link.js" defer></script>
   </head>
   <body>
-    <div data-include="../../includes/header.html"></div>
+    <div data-include="/includes/header.html"></div>
     <main class="content" id="main">
-<div data-include="../../includes/dialysis-subnav.html"></div>
+<div data-include="/includes/dialysis-subnav.html"></div>
       <h1>Common Side Effects of Dialysis</h1>
 
       <p>
@@ -72,7 +72,7 @@
         Not every symptom means something is wrong, but nothing should be dismissed. Keep track of patterns and speak up when something feels off.
       </p>
     </main>
-    <div data-include="../../includes/footer.html"></div>
+    <div data-include="/includes/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
   </body>
 </html>
