--- a/hub/dialysis/staff/technician.html
+++ b/hub/dialysis/staff/technician.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="/styles/main.css" />
 
     <!-- Include loader (one level deeper than side-effects.html) -->
-    <script src="../../../scripts/include.js" defer></script>
+    <script src="/scripts/include.js" defer></script>
   <script src="/scripts/include.js" defer></script>
   <script src="/scripts/active-link.js" defer></script>
   </head>
