--- a/hub/donation/life-after.html
+++ b/hub/donation/life-after.html
@@ -21,17 +21,17 @@
   <script src="/scripts/active-link.js" defer></script>
 </head>
 <body>
-  <div data-include="../../includes/header.html"></div>
+  <div data-include="/includes/header.html"></div>
   <main class="content" id="main">
-    <div data-include="../../includes/donation-subnav.html"></div>
+    <div data-include="/includes/donation-subnav.html"></div>
     <h1>Life After Kidney Donation</h1>
     <p>
       Insights into long-term health, monitoring, and lifestyle adjustments that may be 
       necessary after donating a kidney.
     </p>
   </main>
-  <div data-include="../../includes/footer.html"></div>
-  <script src="../../scripts/include.js" defer></script>
+  <div data-include="/includes/footer.html"></div>
+  <script src="/scripts/include.js" defer></script>
   <script src="/scripts/analytics.js" defer></script>
 </body>
 </html>
