--- a/hub/donation/recovery.html
+++ b/hub/donation/recovery.html
@@ -21,17 +21,17 @@
   <script src="/scripts/active-link.js" defer></script>
 </head>
 <body>
-  <div data-include="../../includes/header.html"></div>
+  <div data-include="/includes/header.html"></div>
   <main class="content" id="main">
-    <div data-include="../../includes/donation-subnav.html"></div>
+    <div data-include="/includes/donation-subnav.html"></div>
     <h1>Recovery After Donation</h1>
     <p>
       Guidance on post-surgery healing, activity restrictions, and returning to normal 
       routines following kidney donation.
     </p>
   </main>
-  <div data-include="../../includes/footer.html"></div>
-  <script src="../../scripts/include.js" defer></script>
+  <div data-include="/includes/footer.html"></div>
+  <script src="/scripts/include.js" defer></script>
   <script src="/scripts/analytics.js" defer></script>
 </body>
 </html>
