--- a/hub/donation/testing.html
+++ b/hub/donation/testing.html
@@ -21,17 +21,17 @@
   <script src="/scripts/active-link.js" defer></script>
 </head>
 <body>
-  <div data-include="../../includes/header.html"></div>
+  <div data-include="/includes/header.html"></div>
   <main class="content" id="main">
-    <div data-include="../../includes/donation-subnav.html"></div>
+    <div data-include="/includes/donation-subnav.html"></div>
     <h1>Evaluation & Testing</h1>
     <p>
       Learn about the evaluation process, required medical tests, and consultations donors 
       undergo to ensure safe and successful kidney donation.
     </p>
   </main>
-  <div data-include="../../includes/footer.html"></div>
-  <script src="../../scripts/include.js" defer></script>
+  <div data-include="/includes/footer.html"></div>
+  <script src="/scripts/include.js" defer></script>
   <script src="/scripts/analytics.js" defer></script>
 </body>
 </html>
