--- a/hub/index.html
+++ b/hub/index.html
@@ -19,11 +19,11 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/styles/main.css" />
-    <script src="../scripts/include.js" defer></script>
+    <script src="/scripts/include.js" defer></script>
   <script src="/scripts/include.js" defer></script>
   </head>
 <body>
-  <div data-include="../includes/header.html"></div>
+  <div data-include="/includes/header.html"></div>
   <main class="content" id="main">
     <h1>Kidney Knowledge Hub</h1>
     <p>
@@ -73,7 +73,7 @@
   </p>
 </div>
   </main>
-  <div data-include="../includes/footer.html"></div>
+  <div data-include="/includes/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
 </body>
 </html>
