--- a/hub/transplant/index.html
+++ b/hub/transplant/index.html
@@ -22,9 +22,9 @@
   <script src="/scripts/active-link.js" defer></script>
 </head>
 <body>
-  <div data-include="../../includes/header.html"></div>
+  <div data-include="/includes/header.html"></div>
   <main class="content" id="main">
-    <div data-include="../../includes/transplant-subnav.html"></div>
+    <div data-include="/includes/transplant-subnav.html"></div>
     
       <h1>Kidney Transplant Hub</h1>
   <p>
@@ -67,8 +67,8 @@
     </p>
   </section>
   </main>
-  <div data-include="../../includes/footer.html"></div>
-  <script src="../../scripts/include.js" defer></script>
+  <div data-include="/includes/footer.html"></div>
+  <script src="/scripts/include.js" defer></script>
   <script src="/scripts/analytics.js" defer></script>
 </body>
 </html>
