--- a/hub/transplant/postop/life-after.html
+++ b/hub/transplant/postop/life-after.html
@@ -21,17 +21,17 @@
   <script src="/scripts/active-link.js" defer></script>
 </head>
 <body>
-  <div data-include="../../../includes/header.html"></div>
+  <div data-include="/includes/header.html"></div>
   <main class="content" id="main">
-    <div data-include="../../../includes/transplant-subnav.html"></div>
+    <div data-include="/includes/transplant-subnav.html"></div>
     <h1>Life After Transplant</h1>
     <p>
       Understand long-term care after a kidney transplant, including medication routines,
       lifestyle adjustments, and staying healthy for years to come.
     </p>
   </main>
-  <div data-include="../../../includes/footer.html"></div>
-  <script src="../../../scripts/include.js" defer></script>
+  <div data-include="/includes/footer.html"></div>
+  <script src="/scripts/include.js" defer></script>
   <script src="/scripts/analytics.js" defer></script>
 </body>
 </html>
