--- a/hub/transplant/postop/recovery.html
+++ b/hub/transplant/postop/recovery.html
@@ -21,17 +21,17 @@
   <script src="/scripts/active-link.js" defer></script>
 </head>
 <body>
-  <div data-include="../../../includes/header.html"></div>
+  <div data-include="/includes/header.html"></div>
   <main class="content" id="main">
-    <div data-include="../../../includes/transplant-subnav.html"></div>
+    <div data-include="/includes/transplant-subnav.html"></div>
     <h1>Recovery After Transplant</h1>
     <p>
       Learn what recovery from a kidney transplant is like, including hospital stay 
       duration, follow-up appointments, and safe return to normal activities.
     </p>
   </main>
-  <div data-include="../../../includes/footer.html"></div>
-  <script src="../../../scripts/include.js" defer></script>
+  <div data-include="/includes/footer.html"></div>
+  <script src="/scripts/include.js" defer></script>
   <script src="/scripts/analytics.js" defer></script>
 </body>
 </html>
