--- a/hub/transplant/preop/matching.html
+++ b/hub/transplant/preop/matching.html
@@ -21,17 +21,17 @@
   <script src="/scripts/active-link.js" defer></script>
 </head>
 <body>
-  <div data-include="../../../includes/header.html"></div>
+  <div data-include="/includes/header.html"></div>
   <main class="content" id="main">
-    <div data-include="../../../includes/transplant-subnav.html"></div>
+    <div data-include="/includes/transplant-subnav.html"></div>
     <h1>Matching Process</h1>
     <p>
       Learn how transplant teams match recipients with donor kidneys, including blood type,
       tissue typing, and cross-matching compatibility.
     </p>
   </main>
-  <div data-include="../../../includes/footer.html"></div>
-  <script src="../../../scripts/include.js" defer></script>
+  <div data-include="/includes/footer.html"></div>
+  <script src="/scripts/include.js" defer></script>
   <script src="/scripts/analytics.js" defer></script>
 </body>
 </html>
