--- a/testimonials/donor-john.html
+++ b/testimonials/donor-john.html
@@ -24,7 +24,7 @@
   <link rel="stylesheet" href="/styles/main.css" />
 </head>
 <body>
-  <div data-include="../includes/header.html"></div>
+  <div data-include="/includes/header.html"></div>
 
   <main class="content" id="main">
       <div class="testimonial-header">
@@ -60,8 +60,8 @@
   </div>
   </main>
 
-  <div data-include="../includes/footer.html"></div>
-  <script src="../scripts/include.js"></script>
+  <div data-include="/includes/footer.html"></div>
+  <script src="/scripts/include.js"></script>
 
   <script src="/scripts/analytics.js" defer></script>
 </body>
