--- a/testimonials/donor-luis.html
+++ b/testimonials/donor-luis.html
@@ -21,7 +21,7 @@
   <link rel="stylesheet" href="/styles/main.css" />
 </head>
 <body>
- <div data-include="../includes/header.html"></div>
+ <div data-include="/includes/header.html"></div>
 
 
 
@@ -72,8 +72,8 @@
   </div>
   </main>
 
-<div data-include="../includes/footer.html"></div>
-  <script src="../scripts/include.js"></script>
+<div data-include="/includes/footer.html"></div>
+  <script src="/scripts/include.js"></script>
 
   <script src="/scripts/analytics.js" defer></script>
 </body>
