Checkpoint before script dedupe

--- a/book.html
+++ b/book.html
@@ -9,20 +9,24 @@
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-JHT0DBJBHH');
+  gtag('config', 'G-JHT0DBJBHH', { transport_type: 'beacon' });
 </script>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>The Book - Tito Needs a Kidney</title>
 
   <!-- Google Fonts: Open Sans -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/styles/main.css" />
+  <link rel="stylesheet" href="/assets/css/main.css" />
+  <script src="/scripts/include.js" defer></script>
+  <script src="/scripts/active-link.js" defer></script>
+  <script src="/scripts/include.js" defer></script>
+  <script src="/scripts/active-link.js" defer></script>
 </head>
 <body>
-  <div data-include="includes/header.html"></div>
+  <div data-include="/includes/header.html"></div>
 
   <main class="content" id="main">
     <h1>Tito Needs a Kidney (The Book)</h1>
@@ -60,7 +64,7 @@
     <p><strong>Available in paperback and ebook formats.</strong> Visit your favorite bookstore or <a href="https://www.amazon.com/Tito-Needs-Kidney-Resilience-Community-ebook/dp/B0DT1N3FFG/ref=sr_1_1?crid=1ECZEOP06LZ38&dib=eyJ2IjoiMSJ9.RVyTUt1N1C4RDZ7dTkuHWeiO36VldEcWRCXx6LNA6CQrNDDNuptlsqM-XgLZgc5FaPtdlmxJ5SWAGBaE6ru2-lpPHvFM-5YMcbvcM5jPUwE._73g6m4XH6gDtqfMsU_gV8wcaj1d7O0goXTSoXlbfj4&dib_tag=se&keywords=tito+needs+a+kidney&qid=1754048170&sprefix=tito+needs+a+kidney%2Caps%2C81&sr=8-1" target="_blank" rel="noopener">buy on Amazon here</a>.</p>
   </main>
 
-  <div data-include="includes/footer.html"></div>
+  <div data-include="/includes/footer.html"></div>
 <script src="scripts/include.js"></script>
   <script src="/scripts/analytics.js" defer></script>
 </body>
