--- a/hub/dialysis/staff/dietitian.html
+++ b/hub/dialysis/staff/dietitian.html
@@ -11,7 +11,7 @@
       gtag("config", "G-JHT0DBJBHH");
     </script>
 
-    <meta charset="UTF-8" />
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Dietitian</title>
     <meta name="description" content="What the dialysis dietitian does, when to go to them, and what they do not handle. Nutrition support for dialysis patients." />
@@ -20,13 +20,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="/styles/main.css" />
+    <link rel="stylesheet" href="/assets/css/main.css" />
 
     <!-- Include loader (one level deeper than /hub/dialysis/*.html) -->
-    <script src="/scripts/include.js" defer></script>
   <script src="/scripts/include.js" defer></script>
   <script src="/scripts/active-link.js" defer></script>
-  </head>
+  <script src="/scripts/include.js" defer></script>
+  <script src="/scripts/active-link.js" defer></script>
+</head>
   <body>
     <!-- Header -->
     <div data-include="/includes/header.html"></div>
@@ -80,6 +81,6 @@
     <!-- Footer -->
     <div data-include="/includes/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
-  </body>
+</body>
 </html>
 
