--- a/hub/dialysis/schedule.html
+++ b/hub/dialysis/schedule.html
@@ -9,20 +9,21 @@
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-JHT0DBJBHH');
+  gtag('config', 'G-JHT0DBJBHH', { transport_type: 'beacon' });
 </script>
-    <meta charset="UTF-8" />
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Dialysis Schedule & Timing</title>
       <!-- Google Fonts: Open Sans -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/styles/main.css" />
-    <script src="/scripts/include.js" defer></script>
+  <link rel="stylesheet" href="/assets/css/main.css" />
   <script src="/scripts/include.js" defer></script>
   <script src="/scripts/active-link.js" defer></script>
-  </head>
+  <script src="/scripts/include.js" defer></script>
+  <script src="/scripts/active-link.js" defer></script>
+</head>
   <body>
     <div data-include="/includes/header.html"></div>
     <main class="content" id="main">
@@ -57,6 +58,6 @@
     </main>
     <div data-include="/includes/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
-  </body>
+</body>
 </html>
 
