--- a/hub/donation/who-can-donate.html
+++ b/hub/donation/who-can-donate.html
@@ -26,6 +26,8 @@
   <!-- Site scripts (defer preserves order) -->
   <script src="/scripts/include.js" defer></script>
   <script src="/scripts/active-link.js" defer></script>
+  <script src="/scripts/include.js" defer></script>
+  <script src="/scripts/active-link.js" defer></script>
 </head>
 <body>
   <div data-include="/includes/header.html"></div>
