--- a/hub/transplant/surgery/staff-surgery.html
+++ b/hub/transplant/surgery/staff-surgery.html
@@ -8,15 +8,17 @@
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-    gtag('config', 'G-JHT0DBJBHH');
+    gtag('config', 'G-JHT0DBJBHH', { transport_type: 'beacon' });
   </script>
-  <meta charset="UTF-8" />
+  <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Transplant Staff - Kidney Transplant Hub</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/styles/main.css" />
+  <link rel="stylesheet" href="/assets/css/main.css" />
+  <script src="/scripts/include.js" defer></script>
+  <script src="/scripts/active-link.js" defer></script>
   <script src="/scripts/include.js" defer></script>
   <script src="/scripts/active-link.js" defer></script>
 </head>
@@ -31,7 +33,6 @@
     </p>
   </main>
   <div data-include="/includes/footer.html"></div>
-  <script src="/scripts/include.js" defer></script>
   <script src="/scripts/analytics.js" defer></script>
 </body>
 </html>
