--- a/start-here.html
+++ b/start-here.html
@@ -9,22 +9,23 @@
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-JHT0DBJBHH');
+  gtag('config', 'G-JHT0DBJBHH', { transport_type: 'beacon' });
 </script>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Start Here - Tito Needs a Kidney</title>
     <!-- Google Fonts: Open Sans -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/styles/main.css" />
+  <link rel="stylesheet" href="/assets/css/main.css" />
+  <script src="/scripts/include.js" defer></script>
+  <script src="/scripts/active-link.js" defer></script>
+  <script src="/scripts/include.js" defer></script>
+  <script src="/scripts/active-link.js" defer></script>
 </head>
 <body>
-  <link rel="stylesheet" href="/styles/main.css" />
-</head>
-<body>
-  <div data-include="includes/header.html"></div>
+  <div data-include="/includes/header.html"></div>
 
    <main class="content" id="main">
     <h1>Welcome – Let's Get You Started</h1>
@@ -65,7 +66,7 @@
     </section>
   </main>
 
-  <div data-include="includes/footer.html"></div>
+  <div data-include="/includes/footer.html"></div>
 <script src="scripts/include.js"></script>
   <script src="/scripts/analytics.js" defer></script>
 </body>
