--- a/hub/donation/life-after.html
+++ b/hub/donation/life-after.html
@@ -24,11 +24,39 @@
   <div data-include="/includes/header.html"></div>
   <main class="content" id="main">
     <div data-include="/includes/donation-subnav.html"></div>
-    <h1>Life After Kidney Donation</h1>
-    <p>
-      Insights into long-term health, monitoring, and lifestyle adjustments that may be 
-      necessary after donating a kidney.
-    </p>
+
+<h1>Life After Kidney Donation</h1>
+<p>Most donors return to full, active lives with one kidney. Long-term health is excellent with routine care and healthy habits.</p>
+
+<h2>Everyday health</h2>
+<ul>
+  <li>Annual checkup: blood pressure, kidney labs, urine check.</li>
+  <li>Hydration: drink regularly, especially with exercise/heat.</li>
+  <li>Avoid chronic NSAID use (ibuprofen/naproxen) unless your doctor approves.</li>
+  <li>Maintain a healthy weight; exercise; don’t smoke.</li>
+</ul>
+
+<h2>Sports &amp; work</h2>
+<ul>
+  <li>Most sports are fine once healed. For contact/high-impact sports, discuss protection and risks.</li>
+  <li>Work: no long-term restrictions for most jobs after recovery.</li>
+</ul>
+
+<h2>Family planning</h2>
+<ul>
+  <li>Pregnancy is usually safe after recovery; many centers suggest waiting 6–12 months.</li>
+  <li>Plan close prenatal care; tell your OB you’re a prior donor.</li>
+</ul>
+
+<h2>Paperwork &amp; support</h2>
+<ul>
+  <li>Keep donor records for future doctors/insurance.</li>
+  <li>It’s normal to feel a lot—proud, anxious, everything between. Reach out to your team or a counselor if needed.</li>
+</ul>
+
+<div class="callout"><p><strong>Remember:</strong> donation is generous—you still set boundaries and care for your own health first.</p></div>
+
+<p class="disclaimer">For personal advice, talk to your transplant team or primary care provider.</p>
   </main>
   <div data-include="/includes/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
