--- a/hub/donation/recovery.html
+++ b/hub/donation/recovery.html
@@ -24,11 +24,33 @@
   <div data-include="/includes/header.html"></div>
   <main class="content" id="main">
     <div data-include="/includes/donation-subnav.html"></div>
-    <h1>Recovery After Donation</h1>
-    <p>
-      Guidance on post-surgery healing, activity restrictions, and returning to normal 
-      routines following kidney donation.
-    </p>
+<h1>Recovery After Donation</h1>
+<p>Recovery is individual. Most donors go home in 1–3 days and return to normal activities within weeks.</p>
+
+<h2>Typical timeline</h2>
+<ul>
+  <li><strong>Hospital (days 1–3):</strong> walking the day of/after surgery, oral pain meds, breathing exercises.</li>
+  <li><strong>Week 1–2:</strong> fatigue is common; short walks daily; no heavy lifting.</li>
+  <li><strong>Weeks 3–6:</strong> light work resumes; desk work often 2–4 weeks, physical jobs 4–8+ weeks with clearance.</li>
+</ul>
+
+<h2>Restrictions &amp; self-care</h2>
+<ul>
+  <li>No lifting &gt;10–15 lbs until cleared; avoid core-straining moves early.</li>
+  <li>Use stool softeners with narcotics; hydrate unless told otherwise.</li>
+  <li>Drive when off narcotics and you can turn/brake comfortably.</li>
+  <li>Incision care: keep clean/dry; watch for redness, drainage, fever.</li>
+</ul>
+
+<h2>Follow-up</h2>
+<ul>
+  <li>Early clinic checks; many centers repeat labs at 6 months, 1 year, and 2 years.</li>
+  <li>Long-term: annual BP and labs with your primary care.</li>
+</ul>
+
+<div class="callout"><p><strong>Call urgently if:</strong> fever &gt;101°F, worsening pain/swelling, shortness of breath, calf pain/swelling, inability to pass urine.</p></div>
+
+<p class="disclaimer">Your team’s instructions overrule this general guidance.</p>
   </main>
   <div data-include="/includes/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
