--- a/hub/donation/risks.html
+++ b/hub/donation/risks.html
@@ -24,11 +24,35 @@
   <div data-include="/includes/header.html"></div>
   <main class="content" id="main">
     <div data-include="/includes/donation-subnav.html"></div>
-    <h1>Risks of Kidney Donation</h1>
-    <p>
-      Explore the short-term and long-term risks of living kidney donation, including 
-      surgical complications and impacts on future health.
-    </p>
+<h1>Risks of Kidney Donation</h1>
+<p>Most donors do well, but all surgery has risks. Know the short-term and long-term considerations.</p>
+
+<h2>Short-term (around surgery)</h2>
+<ul>
+  <li>Anesthesia effects (nausea, rare complications).</li>
+  <li>Bleeding, infection, blood clots.</li>
+  <li>Pain, temporary numbness near incisions.</li>
+  <li>Conversion from laparoscopic to open surgery (rare).</li>
+  <li>Unexpected findings that delay or cancel surgery.</li>
+</ul>
+
+<h2>Long-term</h2>
+<ul>
+  <li><strong>Kidney function:</strong> remaining kidney compensates; lifetime risk of kidney disease is slightly higher than if you hadn’t donated.</li>
+  <li><strong>Blood pressure:</strong> may rise over time—monitor routinely.</li>
+  <li><strong>Pregnancy:</strong> small increased risk of preeclampsia in future pregnancies.</li>
+  <li><strong>Mental health:</strong> mood changes can occur if outcomes are complicated; support helps.</li>
+</ul>
+
+<h2>Financial &amp; practical</h2>
+<ul>
+  <li>Evaluation/surgery usually covered; travel and lost wages vary.</li>
+  <li>Insurance questions (life/disability) may reference donation—clarify ahead of time.</li>
+</ul>
+
+<div class="callout"><p><strong>Ask:</strong> What are this center’s complication rates? What’s <em>my</em> risk given age/BP/BMI? Who do I call after hours?</p></div>
+
+<p class="disclaimer">Informational only; discuss personal risks with your transplant team.</p>
   </main>
   <div data-include="/includes/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
