--- a/hub/donation/testing.html
+++ b/hub/donation/testing.html
@@ -24,11 +24,90 @@
   <div data-include="/includes/header.html"></div>
   <main class="content" id="main">
     <div data-include="/includes/donation-subnav.html"></div>
-    <h1>Evaluation & Testing</h1>
-    <p>
-      Learn about the evaluation process, required medical tests, and consultations donors 
-      undergo to ensure safe and successful kidney donation.
-    </p>
+<h1>Evaluation &amp; Testing</h1>
+<p>The donor work-up checks kidney health, overall fitness, and readiness—medically and emotionally. You can pause or stop at any time; your reasons stay private with the transplant team.</p>
+
+<h2>How matching works (quick primer)</h2>
+<ul>
+  <li><strong>Blood type (ABO):</strong> Some types match easily (O donates to anyone), others may need a swap program.</li>
+  <li><strong>HLA typing:</strong> A genetic “fingerprint” the immune system uses to recognize tissue.</li>
+  <li><strong>Crossmatch:</strong> Mixes donor cells/serum with the recipient’s to see if there’s a reaction.
+    <ul>
+      <li><em>Negative crossmatch</em> → generally compatible.</li>
+      <li><em>Positive crossmatch</em> → usually incompatible; a paired exchange or desensitization may be discussed.</li>
+    </ul>
+  </li>
+</ul>
+
+<h2>Phases of evaluation</h2>
+<h3>1) Pre-screen</h3>
+<ul>
+  <li>Health questionnaire &amp; phone call with a coordinator/ILDA (Independent Living Donor Advocate).</li>
+  <li>Local labs: blood type, basic kidney and urine tests. Sometimes a 24-hour urine collection.</li>
+</ul>
+
+<h3>2) Full work-up (often 1–2 clinic days)</h3>
+<ul>
+  <li><strong>Kidney function:</strong> creatinine/eGFR; sometimes a <em>measured GFR</em> for precision.</li>
+  <li><strong>Urine testing:</strong> protein/albumin, microscopic exam; 24-hour collection if needed.</li>
+  <li><strong>Imaging:</strong> CT angiography of both kidneys (looks at arteries/veins, anatomy) to plan which kidney to remove.</li>
+  <li><strong>Heart &amp; lungs:</strong> EKG; chest X-ray; stress test if age/risk factors suggest it.</li>
+  <li><strong>Infectious disease &amp; metabolic labs:</strong> standard screening; glucose/A1c, lipids, etc.</li>
+  <li><strong>Consults:</strong> nephrologist, surgeon, social worker, dietitian, and psychologist/psychiatrist.</li>
+  <li><strong>Women of child-bearing potential:</strong> pregnancy test; up-to-date cancer screening per guidelines (Pap, mammogram, colonoscopy based on age).</li>
+</ul>
+
+<h3>3) Review &amp; decision</h3>
+<ul>
+  <li><strong>Approved:</strong> you’re medically cleared; surgery scheduling starts.</li>
+  <li><strong>Deferred:</strong> something needs attention (e.g., BP optimization, weight loss, repeat test).</li>
+  <li><strong>Declined:</strong> donation not recommended for your safety. Your reason remains confidential unless <em>you</em> choose to share it.</li>
+</ul>
+
+<h2>If you’re incompatible</h2>
+<ul>
+  <li><strong>Paired exchange:</strong> you and your recipient swap with another pair.</li>
+  <li><strong>Non-directed donation + priority for your recipient:</strong> some programs allow a non-directed donation that benefits your intended recipient via a chain.</li>
+</ul>
+
+<h2>Timeline</h2>
+<p>Many centers finish evaluation in <strong>1–3 months</strong>. Fast-tracks exist for urgent cases; complex findings can add time (extra imaging, repeat labs, consults).</p>
+
+<h2>Costs &amp; logistics</h2>
+<ul>
+  <li><strong>Medical bills:</strong> evaluation and surgery are usually covered by the recipient’s insurance through the transplant center.</li>
+  <li><strong>Travel &amp; time off:</strong> coverage varies; ask about reimbursements, lodging, and employer forms.</li>
+  <li><strong>Insurance questions:</strong> life/disability policies may ask about donation history—clarify before surgery.</li>
+</ul>
+
+<h2>How to prepare</h2>
+<ul>
+  <li>Bring a <strong>medication list</strong>, allergies, and past surgeries.</li>
+  <li>Follow fasting instructions for labs/imaging; drink water unless told otherwise.</li>
+  <li>Avoid new supplements; limit NSAIDs unless your team says they’re okay.</li>
+  <li>Wear comfortable clothes/shoes; expect lots of walking between departments.</li>
+</ul>
+
+<h2>What to expect on “evaluation day”</h2>
+<ul>
+  <li>Check-in, blood/urine labs, EKG, chest X-ray.</li>
+  <li>CT scan block (contrast given for kidney imaging).</li>
+  <li>Visits with nephrologist, surgeon, social worker, dietitian, ILDA.</li>
+  <li>Plan on 6–8 hours; bring a snack and questions.</li>
+</ul>
+
+<div class="callout">
+  <p><strong>Ask your team:</strong></p>
+  <ul>
+    <li>Which tests can I do locally? Can we bundle others into one visit?</li>
+    <li>What BP, BMI, or lab cutoffs does this center use?</li>
+    <li>How often do you use paired exchange? What’s the usual wait?</li>
+    <li>What help is available for travel, lodging, or lost wages?</li>
+    <li>Who do I call after hours if I have a question or reaction to contrast?</li>
+  </ul>
+</div>
+
+<p class="disclaimer">This page is informational and not medical advice. Policies and eligibility vary by center and your personal health history.</p>
   </main>
   <div data-include="/includes/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
