--- a/hub/donation/index.html
+++ b/hub/donation/index.html
@@ -24,60 +24,62 @@
 <body>
   <div data-include="/includes/header.html"></div>
   <main class="content" id="main">
-  <h1>Living Kidney Donation Hub</h1>
-  <p>
-    Living kidney donation is an extraordinary gift that can change lives. 
-    This section explains who can donate, what testing involves, the risks 
-    and recovery process, and what life looks like after donation.
-  </p>
+<div data-include="/includes/donation-subnav.html"></div>
 
-  <section class="testimonial-summary">
-    <h2><a href="who-can-donate.html">Who Can Donate?</a></h2>
-    <p>
-      Learn the medical and lifestyle factors that determine donor eligibility 
-      and what considerations are reviewed before you can donate a kidney.
-    </p>
-  </section>
+<h1>Living Kidney Donation Hub</h1>
+<p>
+  Living kidney donation is an extraordinary gift. This hub explains who can donate,
+  how testing works, the risks, recovery, and life after donation — in plain English.
+</p>
 
-  <section class="testimonial-summary">
-    <h2><a href="testing.html">Evaluation & Testing</a></h2>
-    <p>
-      Understand the full donor evaluation process, including bloodwork, 
-      imaging scans, consultations, and psychological assessments.
-    </p>
-  </section>
+<section class="testimonial-summary">
+  <h2><a href="/hub/donation/who-can-donate.html" data-evt="donation:who">Who Can Donate?</a></h2>
+  <p>Medical and lifestyle factors for donor eligibility and common reasons a center might say “not now.”</p>
+</section>
 
-  <section class="testimonial-summary">
-    <h2><a href="risks.html">Risks of Donation</a></h2>
-    <p>
-      Every surgery has risks. This guide outlines the short-term surgical 
-      risks and the long-term considerations for living kidney donors.
-    </p>
-  </section>
+<section class="testimonial-summary">
+  <h2><a href="/hub/donation/testing.html" data-evt="donation:testing">Evaluation &amp; Testing</a></h2>
+  <p>The full donor work-up: labs, imaging, consults, matching, timelines, and what “approved / deferred / declined” mean.</p>
+</section>
 
-  <section class="testimonial-summary">
-    <h2><a href="recovery.html">Recovery Process</a></h2>
-    <p>
-      From hospital stay to returning to normal activities, learn what to 
-      expect in the days and weeks following donation.
-    </p>
-  </section>
+<section class="testimonial-summary">
+  <h2><a href="/hub/donation/risks.html" data-evt="donation:risks">Risks of Donation</a></h2>
+  <p>Short-term surgical risks, long-term considerations (BP, kidney function, pregnancy), and practical/financial notes.</p>
+</section>
 
-  <section class="testimonial-summary">
-    <h2><a href="life-after.html">Life After Donation</a></h2>
-    <p>
-      Discover what long-term health and lifestyle changes, if any, are 
-      common for kidney donors and how they maintain overall wellness.
-    </p>
-  </section>
+<section class="testimonial-summary">
+  <h2><a href="/hub/donation/recovery.html" data-evt="donation:recovery">Recovery Process</a></h2>
+  <p>Hospital stay, lifting limits, driving, return-to-work timelines, follow-ups, and when to call the team.</p>
+</section>
 
-  <section class="callout">
-    <p>
-      Donating a kidney is a major decision. This hub helps you understand 
-      the facts, ask the right questions, and feel supported every step 
-      of the way.
-    </p>
-  </section>
+<section class="testimonial-summary">
+  <h2><a href="/hub/donation/life-after.html" data-evt="donation:life-after">Life After Donation</a></h2>
+  <p>Annual checkups, sports, work, family planning, and long-term health habits that keep you well.</p>
+</section>
+
+<section class="callout">
+  <p><strong>Independent Living Donor Advocate (ILDA):</strong> You have an advocate on your team whose job is to protect <em>your</em> interests. You can pause or stop the process at any time.</p>
+</section>
+
+<!-- Optional quick FAQ (nice engagement bump, fully native) -->
+<section>
+  <h2>Quick Questions</h2>
+  <details>
+    <summary>How long does evaluation take?</summary>
+    <p>Often 1–3 months. Fast-tracks exist; complex findings can add time for extra tests or consults.</p>
+  </details>
+  <details>
+    <summary>Who pays for donor testing and surgery?</summary>
+    <p>Typically the recipient’s insurance via the transplant center. Travel/lodging and time off vary by program — ask early.</p>
+  </details>
+  <details>
+    <summary>What if I’m incompatible?</summary>
+    <p>Paired exchange or a non-directed donation chain can still help your intended recipient.</p>
+  </details>
+</section>
+
+<p class="disclaimer">Informational only. Your center’s policies and your medical history control final decisions.</p>
+
   </main>
   <div data-include="/includes/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
